<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clolorWhite"
    android:padding="30dp"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagesignup"
            android:layout_width="140dp"
            android:layout_height="117dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/subway"
            android:transitionName="logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:transitionName="name_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_name"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/black"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/pen"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_user"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/black"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_email"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/black"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_password"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@android:color/black"
                app:hintTextColor="@android:color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/black"
                app:startIconDrawable="@drawable/padlock"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_gender"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_female" />

                <RadioButton
                    android:id="@+id/radio_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_other" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_age"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup_done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary2"
            android:elevation="5dp"
            android:text="@string/signup_done"
            android:textColor="@android:color/white"
            android:transitionName="btn_Next_transition" />


    </LinearLayout>

</ScrollView>