<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clolorWhite"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagelogin"
            android:layout_width="140dp"
            android:layout_height="117dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/subway"
            android:transitionName="logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="336dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:transitionName="name_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.386"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagelogin" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvusername"
            app:boxStrokeColor="@android:color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvpassword"
            app:boxStrokeColor="@android:color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:startIconDrawable="@drawable/padlock"
            app:startIconTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkremember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@android:color/black"
                android:text="@string/check_remember"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary2"
                android:layout_alignParentRight="true"
                android:onClick="callForget"
                android:text="@string/btn_forget" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary2"
            android:text="@string/btn_login"
            android:onClick="UserConection"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_Create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/btn_create"
            android:onClick="callSingup"
            android:background="@color/colorPrimary2"/>


    </LinearLayout>

</ScrollView>