<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:background="@color/clolorWhite"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="153dp"
            android:layout_height="146dp"
            android:src="@drawable/subway"
            android:padding="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textSize="60sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_detail"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txforgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxStrokeColor="@android:color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/sign_email"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@android:color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/black"
            android:textColorHint="@android:color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary2"
            android:textColor="@android:color/black"
            android:text="@string/brn_next"
            android:onClick="callForget2"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>



    </LinearLayout>

</ScrollView>