<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GasireRute"
    android:orientation="vertical"
    android:background="#b2d2ff">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/gasire_ruta"
        style="@style/Style_three"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/image_view_rute_metrou"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/text_view_rute_trenuri"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/gasire_loc"
            android:textColor="#000000"
            android:textSize="25sp"

            />

        <ImageButton
            android:id="@+id/image_button_open_show_location"
            android:layout_width="41dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="#11000000"
            android:src="@drawable/streetview"
            tools:ignore="VectorDrawableCompat" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_stPlecare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Statie de plecare:"
        android:textColor="#000000"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Statie de plecare"
        />

    <TextView
        android:id="@+id/tv_stSosire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Statie de sosire:"
        android:textColor="#000000"
        />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Statie de sosire"
        />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecteaza data:"
        android:textColor="#000000"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_data"
        android:hint="Selecteaza data"
        />
    <Button
        android:id="@+id/btnCauta"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/black"
        android:text="@string/btn_cauta"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/btn_save"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>

