<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Meniu"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="#b2d2ff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageButton
            android:id="@+id/image_ParseXML"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerInParent="true"
            android:src="@drawable/subway2" />
        <TextView
            android:id="@+id/textView_meniu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_meniu"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_below="@id/image_ParseXML"
            />
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Logout"
            android:text="Log Out "
            android:background="@color/clolorWhite"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_meniu"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_weight="3"
        android:padding="10dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_ruta"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="0dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_track"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/track"/>
            <TextView
                android:id="@+id/ruta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meniu_ruta"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_login"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="0dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image_login"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/login"/>
                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meniu_cont"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_info"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="0dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image_info"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/information"/>
                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meniu_info"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_program"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="0dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image_time"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/report"/>
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meniu_locatii"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>



</LinearLayout>